# tension_calibration

./: CMakeLists.txt  README.md  package.xml  setup.py
config/: calibration_params.yaml
data/: current_position.csv  current_turns.csv  current_turns_sample_copy.csv
launch/: calibration.launch  record_calibration.launch  test_calibration.launch  test_calibration_with_bag.launch  test_camera.launch
scripts/: csv_test.py  dataset_postprocessing.py  tension_calibrator.py
src/: motor_calibrator.py
src/tension_calibration/: motor_calibrator.py
